# ubi-doc

./: Cargo.toml  Dockerfile  README.md  action.yml  todo
.github/workflows/: action-lint.yml  action-test.yml  test-ci.yml
docs/: index.html
docs/ubi-doc/: index.html  script.js
sample/: generated.html  sample.java  sample.kt  sample.php  sample.rb
sample/java/: Order.java
sample/kotlin/: Order.kt
sample/php/: Order.php
sample/ruby/: Order.rb
sample/ubi-doc/: style.css  ubiquitous.html
src/: file_io.rs  main.rs  parser.rs
src/file_io/: guess_language_by_extension.rs
src/outputs/: html.rs
src/outputs/html/: generate_html.rs  output_assets.rs  render_html.rs  ubiquitous_row.rs  ubiquitous_rows.rs
src/outputs/html/templates/: ubiquitous.html
src/parser/: DocComment.rs  Language.rs  comment_node_collect.rs  comment_paser.rs  extract_ubiquitous.rs  file_io.rs  get_ubiquitous.rs  get_ubiquitous_list.rs  kotlin.rs  mod.rs  php.rs  ruby.rs  ubiquitous.rs
src/parser/converter/: extract_comment.rs  mod.rs
src/parser/file_io/: read_sources_from_dir.rs
src/parser/java/: collect_class_docs.rs  extract_ubiquitous.rs  get_ubiquitous.rs
src/parser/kotlin/: collect_class_docs.rs  extract_ubiquitous.rs  get_ubiquitous.rs
src/parser/php/: collect_class_docs.rs  extract_ubiquitous.rs  get_comments.rs  get_ubiquitous.rs  ubiquitous_node_collect.rs
src/parser/ruby/: collect_class_docs.rs  extract_ubiquitous.rs  get_ubiquitous.rs
tests/fixtures/: output.html  sample.unknown
