[package]
name = "ubi-doc"
version = "0.0.3"
edition = "2021"

[dependencies]
tree-sitter = "0.24.6"
tree-sitter-php = "0.23.11"
walkdir = "2"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"