[package]
name = "ubi-doc"
version = "0.0.5"
edition = "2021"

[dependencies]
tree-sitter = "0.24.6"
tree-sitter-php = "0.23.11"
tree-sitter-ruby = "0.23.1"
tree-sitter-java = "0.19.0"
walkdir = "2"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin.git", rev = "c4ddea359a7ff4d92360b2efcd6cfce5dc25afe6" }
